cmake_minimum_required(VERSION 2.6)
project(CMAKEDEMO)

SET (CTEST_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../projects/library")

#SET (HOME_DIRECTORY "$ENV{HOME}")
## Variables describing the build environments.
#SET (CTEST_SOURCE_ROOT_DIRECTORY "${HOME_DIRECTORY}/seqan-trunk")

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(SWIG)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CTEST_SOURCE_DIRECTORY})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(alignment.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(alignment python alignment.i alignment.h)
SWIG_LINK_LIBRARIES(alignment ${PYTHON_LIBRARIES})
